quá mịt moã r. Khum commit nữa đc khum (update footer cho all pahe)

--- a/Cart/Cart/Cart.csproj
+++ b/Cart/Cart/Cart.csproj
@@ -233,7 +233,6 @@
     <Content Include="bootstrap\MDB5-STANDARD-UI-KIT-Free-3.11.0\src\js\mdb\util\touch\swipe.js" />
     <Content Include="bootstrap\MDB5-STANDARD-UI-KIT-Free-3.11.0\src\js\mdb\util\touch\touchUtil.js" />
     <Content Include="bootstrap\script.js" />
-    <Content Include="chitietdt.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -248,6 +247,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="GioHang.aspx" />
+    <Content Include="GioiThieu.aspx" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -267,7 +267,10 @@
     <Content Include="bootstrap\js\bootstrap.bundle.min.js.map" />
     <Content Include="bootstrap\js\bootstrap.js.map" />
     <Content Include="bootstrap\js\bootstrap.min.js.map" />
+    <Content Include="GuiYeuCauHoTro.aspx" />
     <Content Include="Home.aspx" />
+    <Content Include="Hotro.aspx" />
+    <Content Include="HuongDanDatHang.aspx" />
     <Content Include="Images\Content\690-300-690x300-15.png" />
     <Content Include="Images\Content\content1.jpg" />
     <Content Include="Images\Content\content2.jpg" />
@@ -644,6 +647,7 @@
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
     <Content Include="TongQuan.aspx" />
+    <Content Include="TuyenDung.aspx" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -659,13 +663,6 @@
       <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="chitietdt.aspx.cs">
-      <DependentUpon>chitietdt.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="chitietdt.aspx.designer.cs">
-      <DependentUpon>chitietdt.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -708,8 +705,22 @@
     <Compile Include="GioHang.aspx.designer.cs">
       <DependentUpon>GioHang.aspx</DependentUpon>
     </Compile>
+    <Compile Include="GioiThieu.aspx.cs">
+      <DependentUpon>GioiThieu.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="GioiThieu.aspx.designer.cs">
+      <DependentUpon>GioiThieu.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="GuiYeuCauHoTro.aspx.cs">
+      <DependentUpon>GuiYeuCauHoTro.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="GuiYeuCauHoTro.aspx.designer.cs">
+      <DependentUpon>GuiYeuCauHoTro.aspx</DependentUpon>
     </Compile>
     <Compile Include="Home.aspx.cs">
       <DependentUpon>Home.aspx</DependentUpon>
@@ -717,6 +728,20 @@
     </Compile>
     <Compile Include="Home.aspx.designer.cs">
       <DependentUpon>Home.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Hotro.aspx.cs">
+      <DependentUpon>Hotro.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Hotro.aspx.designer.cs">
+      <DependentUpon>Hotro.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="HuongDanDatHang.aspx.cs">
+      <DependentUpon>HuongDanDatHang.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="HuongDanDatHang.aspx.designer.cs">
+      <DependentUpon>HuongDanDatHang.aspx</DependentUpon>
     </Compile>
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
@@ -760,6 +785,13 @@
     </Compile>
     <Compile Include="TongQuan.aspx.designer.cs">
       <DependentUpon>TongQuan.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="TuyenDung.aspx.cs">
+      <DependentUpon>TuyenDung.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TuyenDung.aspx.designer.cs">
+      <DependentUpon>TuyenDung.aspx</DependentUpon>
     </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
